--- a/检测近缘种之间的正选择/paml/低拷贝基因家族正选择分析.md
+++ b/检测近缘种之间的正选择/paml/低拷贝基因家族正选择分析.md
@@ -12,7 +12,7 @@
 
 用于分析的文件命名为：[A-Za-z]{3}.fa
 
-![Untitled](Untitled.png)
+![Untitled](/Users/SinLee/.Trash/pipelines%252021.57.45/%25E5%259F%25BA%25E5%259B%25A0%25E7%25BB%2584/%25E6%25A3%2580%25E6%25B5%258B%25E8%25BF%2591%25E7%25BC%2598%25E7%25A7%258D%25E4%25B9%258B%25E9%2597%25B4%25E7%259A%2584%25E6%25AD%25A3%25E9%2580%2589%25E6%258B%25A9/paml/Untitled.png)
 
 #### 1.1.2 根据长度筛选cds和protein序列
 
@@ -33,7 +33,7 @@ perl ../scripts/2.add_species_name_to_fa_sequences.pl Prefix.fa
 
 用于分析的序列的名称是>[a-zA-Z]{3}|.*
 
-![Untitled 1](Untitled%201.png)
+![Untitled 1](/Users/SinLee/.Trash/pipelines%252021.57.45/%25E5%259F%25BA%25E5%259B%25A0%25E7%25BB%2584/%25E6%25A3%2580%25E6%25B5%258B%25E8%25BF%2591%25E7%25BC%2598%25E7%25A7%258D%25E4%25B9%258B%25E9%2597%25B4%25E7%259A%2584%25E6%25AD%25A3%25E9%2580%2589%25E6%258B%25A9/paml/Untitled%25201.png)
 
 ---
 
@@ -97,7 +97,7 @@ perl 5.create_blast_sh.pl
 mkdir fas && mv *fa fas && rm -rf OG*p* && mkdir blastouts && cd blastouts
 perl 6.grep_besthit_by_score.pl
 mkdir blastouts && mkdir besthits && mkdir besthit_seqs && mv *out blastouts && rm -f *besthit  
-perl 7.Extract_Pep_Cds_Seq.pl allcds.fa allpep.fa Best_Hit.genelist
+perl 7.Extract_Pep_Cds_Seq.pl allcds.fa allpep.fa
 mkdir cdss && mkdir peps && mv *cds cdss && mv *pep peps
 perl 8.create_mafft_sh.pl mafft.sh mafftseqs
 bash mafft.sh >mafft.log 2>>mafft.err 
@@ -121,7 +121,9 @@ mkdir phys
 mv *phy phys && mv phys ..
 ```
 
-### 2.3 使用codeml的branch-site model进行正选择分析
+## 3. 使用codeml的branch-site model进行正选择分析
+
+### 3.1 正选择分析、显著性检验
 
 [教程一]:https://www.jianshu.com/p/152a6216c794
 [教程二]: https://www.cnblogs.com/bio-mary/p/12923978.html
@@ -150,10 +152,27 @@ perl 14.LRT.pl m0.lnL ma.lnL
 (Ath,((Rco,(Peu,Ptr)),(Clo,(Rap,(Bpa,(Bcy,(Bgy,Bse)))$1))));
 ```
 
-### 2.4 根据拟南芥的基因做功能的注释
+### 3.2 根据拟南芥的基因做功能的注释
 
 ```bash
+perl 15.Anno_Pos_Selected_GF_by_Ath.pl positive_selected.txt Orthogroups.txt ath.gene.discription
 ```
+
+### 3.3 提取拟南芥/目标物种的基因家族中的genelist做GO和KEGG分析
+
+[note]: 具体可以参考pipeline中的用clusterprofiler做富集分析。
+
+#### 3.3.1 提取gene list
+
+```bash
+perl 16.Extract_Gene_In_GF.pl positive_selected.txt Orthogroups.txt PREFIX
+
+# 为了方便后续分析，这里自动提取受到正选择的基因家族中的拟南芥的基因，PREFIX是想要提取的目标物种的三个字母的缩写。
+```
+
+#### 3.3.2 做go和kegg富集
+
+[note]: 具体可以参考我的富集pipeline，链接：https://github.com/SYSU-SinLee/genome-pipelines/tree/main/%E7%94%A8ClusterProfiler%E5%81%9AGO%E5%AF%8C%E9%9B%86。或者李玉龙的一份比较详细的教程：https://www.yuque.com/docs/share/e41471eb-5b6f-4c6a-90e2-62382c6818f0?#（密码：ykqg）。
 
 
 
@@ -638,8 +657,15 @@ foreach my $mash (@mashs) {
 #### 14.LRT.pl
 
 ```perl
+## Here we use Likelihood Ratio Test, and the p-value threshold is 0.05.
+## Use command "chi2" in paml software to check the p-value table of chi2 test.
+
+
 open M0,"<","$ARGV[0]";
 open MA,"<","$ARGV[1]";
+
+die "Usage: perl $0 ma.lnL m0.lnL\n" if @ARGV!=2;
+
 
 my @fas;
 
@@ -672,11 +698,106 @@ my @fas=sort {$delta_lnLs{$b}<=>$delta_lnLs{$a}} keys %delta_lnLs;
 open POS,">positive_selected.txt";
 open NON,">non_positive_selected.txt";
 foreach my $fa (@fas) {
-	if ($delta_lnLs{$fa}>=2.7055) {
+	if ($delta_lnLs{$fa}>=2.71) {
 		print POS "$fa\t$delta_lnLs{$fa}\n";
 	} else {
 		print NON "$fa\t$delta_lnLs{$fa}\n";
 	}
 }
+```
+
+#### 15.Anno_Pos_Selected_GF_by_Ath.pl
+
+```perl
+## This script is used to annotate the positive selected gene family using the gene description information of A. thaliana.
+ 
+die "Usage: perl $0 positive_selected.txt Orthogroups.txt ath.gene.discription\n" if @ARGV!=4;
+
+use autodie;
+use strict;
+
+open POSGF,"<","$ARGV[0]";
+open GF,"<","$ARGV[1]";
+open ANNO,"<","$ARGV[2]";
+open POSANNO,">","positive_selected_gf.Ath_anno.txt";
+
+my @Positive_Selected_OGs;
+while (<POSGF>) {
+	s/\s+$//;
+	my $OG=(split/\s+/)[0];
+	$OG=~s/pal2aln_/OG/;
+	$OG=~s/\-gb.*$//;
+	push @Positive_Selected_OGs,$OG;
+}
+close POSGF;
+
+my %Anno;
+while (<ANNO>) {
+	next if /^Locus/;
+	s/\s+$//;
+	my @eles=split/\s+/;
+	shift @eles;
+	my $Gene=shift @eles;
+	my $Anno=join(" ",@eles);
+	$Anno{$Gene}=$Anno;
+}
+close ANNO;
+
+while (<GF>) {
+	s/\s+$//;
+	my $Line=$_;
+	my @eles=split/\s+/;
+	my $OG=shift @eles;
+	$OG=~s/://;
+	if (grep {$OG eq $_} @Positive_Selected_OGs) {
+		$Line=~m/Ath\|(.*?)\s+/;
+		my $Ath_Gene=$1;
+		print POSANNO "$OG\t$Ath_Gene\t$Anno{$Ath_Gene}\n";
+	}
+}
+close GF;
+```
+
+#### 16.Extract_Gene_In_GF.pl
+
+```perl
+use autodie;
+use strict;
+
+open POSGF,"<","$ARGV[0]";
+open GF,"<","$ARGV[1]";
+open ATHGENELIST,">","Ath.genelist.txt";
+my $Spe=$ARGV[3];
+open SPEGENELIST,">","$Spe.genelist.txt";
+
+my @Positive_Selected_OGs;
+while (<POSGF>) {
+		s/\s+$//;
+		my $OG=(split/\s+/)[0];
+		$OG=~s/pal2aln_/OG/;
+		$OG=~s/\-gb.*$//;
+		push @Positive_Selected_OGs,$OG;
+}
+close POSGF;
+
+while (<GF>) {
+	s/\s+$//;
+	my $Line=$_;
+	my @eles=split/\s+/;
+	my $OG=shift @eles;
+	$OG=~s/://;
+	if (grep {$OG eq $_} @Positive_Selected_OGs) {
+		foreach my $ele (@eles) {
+			if ($ele=~m/Ath\|(.*)/) {
+				my $Ath_Gene=$1;
+				print ATHGENELIST "$Ath_Gene\n";
+			} elsif ($ele=~m/$Spe\|(.*)/) {
+				my $Spe_Gene=$1;
+				print SPEGENELIST "$Spe_Gene\n";
+			}
+		}
+	}
+}
+close GF;
 ```
 
