--- a/检测近缘种之间的正选择/paml/低拷贝基因家族正选择分析.md
+++ b/检测近缘种之间的正选择/paml/低拷贝基因家族正选择分析.md
@@ -12,7 +12,7 @@
 
 用于分析的文件命名为：[A-Za-z]{3}.fa
 
-![Untitled](/Users/SinLee/.Trash/pipelines%252021.57.45/%25E5%259F%25BA%25E5%259B%25A0%25E7%25BB%2584/%25E6%25A3%2580%25E6%25B5%258B%25E8%25BF%2591%25E7%25BC%2598%25E7%25A7%258D%25E4%25B9%258B%25E9%2597%25B4%25E7%259A%2584%25E6%25AD%25A3%25E9%2580%2589%25E6%258B%25A9/paml/Untitled.png)
+![Untitled](.//Untitled.png)
 
 #### 1.1.2 根据长度筛选cds和protein序列
 
@@ -33,7 +33,7 @@ perl ../scripts/2.add_species_name_to_fa_sequences.pl Prefix.fa
 
 用于分析的序列的名称是>[a-zA-Z]{3}|.*
 
-![Untitled 1](/Users/SinLee/.Trash/pipelines%252021.57.45/%25E5%259F%25BA%25E5%259B%25A0%25E7%25BB%2584/%25E6%25A3%2580%25E6%25B5%258B%25E8%25BF%2591%25E7%25BC%2598%25E7%25A7%258D%25E4%25B9%258B%25E9%2597%25B4%25E7%259A%2584%25E6%25AD%25A3%25E9%2580%2589%25E6%258B%25A9/paml/Untitled%25201.png)
+![Untitled 1](./Untitled 1.png)
 
 ---
 
