--- a/检测近缘种之间的正选择/paml/低拷贝基因家族正选择分析.md
+++ b/检测近缘种之间的正选择/paml/低拷贝基因家族正选择分析.md
@@ -12,7 +12,7 @@
 
 用于分析的文件命名为：[A-Za-z]{3}.fa
 
-![Untitled](.//Untitled.png)
+![Untitled](Untitled.png)
 
 #### 1.1.2 根据长度筛选cds和protein序列
 
@@ -33,7 +33,7 @@ perl ../scripts/2.add_species_name_to_fa_sequences.pl Prefix.fa
 
 用于分析的序列的名称是>[a-zA-Z]{3}|.*
 
-![Untitled 1](./Untitled 1.png)
+![Untitled 1](Untitled%201.png)
 
 ---
 
@@ -82,9 +82,14 @@ orthofinder -b previous_orthofinder_directory -f new_fasta_directory
 ### 2.1 挑选低拷贝基因家族，提取其中的序列
 
 [^ Note]: Working directory is `Orthogroup_Sequence` dir. 这里的筛选标准是：以拟南芥为外群，所以要求该基因家族中包含仅一个拟南芥的基因，其它物种则至少有一个基因，至多有三个基因。
+[^Warnings]: 记得更改`3.extract_low_copy_gf_seqs.pl`中拟南芥在数组中的排序值，虽然一般拟南芥是在第一个。
 
 ```
 perl 3.extract_low_copy_gf_seqs.pl ../Orthogroups/Orthogroups.GeneCount.tsv
+
+# 如果没有生成，或者误删了Orthogroup_Sequennce文件夹，就用下面这个脚本
+perl 3.2.extract_low_copy_gf_seqs.pl Orthogroups.GeneCount.tsv Orthogroups.txt allpep.fa
+
 mkdir fas
 mv *fa fas
 ```
@@ -92,33 +97,28 @@ mv *fa fas
 ### 2.2 挑选跟外群最相似的序列
 
 ```bash
+cd fas
 perl 4.mkblastdb_sh.pl 
 perl 5.create_blast_sh.pl
-mkdir fas && mv *fa fas && rm -rf OG*p* && mkdir blastouts && cd blastouts
+rm -rf *fa && rm -rf OG*p*
 perl 6.grep_besthit_by_score.pl
-mkdir blastouts && mkdir besthits && mkdir besthit_seqs && mv *out blastouts && rm -f *besthit  
-perl 7.Extract_Pep_Cds_Seq.pl allcds.fa allpep.fa
-mkdir cdss && mkdir peps && mv *cds cdss && mv *pep peps
-perl 8.create_mafft_sh.pl mafft.sh mafftseqs
-bash mafft.sh >mafft.log 2>>mafft.err 
-mkdir mafftout
-mv mafft* mafftout
-perl 9.sort_cds_mafft.pl mafftoutdir/mafftseqs cdss sortedcdsdir
-perl 10.create_pal2aln.pl mafftoutdir/mafftseqs sortedcdsdir pal2nalfas pal2nal.sh
-nohup bash pal2nal.sh >pal2nal.log 2>>pal2nal.err &
+rm -f *besthit && rm -rf *out
+perl 7.Extract_Pep_Cds_Seq.pl allcds.fa allpep.fa Best_Hit.genelist
+mkdir peps && mv *pep peps && mkdir cdss && mv *cds cdss rm -f blast* make*
+perl 8.create_mafft_sh.pl peps mafft.sh mafftseqs
+rm -f mafft_* && mkdir mafftout && mv mafft* mafftout
+perl 9.sort_cds_mafft.pl mafftout/mafftseqs cdss sortedcdsdir
+perl 10.create_pal2aln.pl mafftout/mafftseqs sortedcdsdir pal2nalfas pal2nal.sh
+nohup bash pal2nal.sh 2>>pal2nal.err &
 mkdir pal2naloutdir
 mv pal2nal* err* pal2naloutdir
 perl 11.create.gblocks_sh.pl pal2naloutdir/pal2nalfas gblockshtms gblocks.sh
 bash gblocks.sh
-mkdir gblocksoutdir
-mkdir gblocksgbs
-mv pal2naloutdir/pal2nalfas/*htm gblockshtms
-mv pal2naloutdir/pal2nalfas/*gb gblocksgbs
-mv gblocks* gblocksoutdir
+mkdir gblocksoutdir && mkdir gblocksgbs && mv pal2nalfas/*htm gblockshtms && mv pal2nalfas/*gb gblocksgbs && mv gblocks* gblocksoutdir
 cd gblocksoutdir/gblocksgbs
 perl 12.gb2phy.pl
 mkdir phys
-mv *phy phys && mv phys ..
+mv *phy phys && mv phys ../../ && cd ../../phys
 ```
 
 ## 3. 使用codeml的branch-site model进行正选择分析
@@ -167,7 +167,7 @@ perl 15.Anno_Pos_Selected_GF_by_Ath.pl positive_selected.txt Orthogroups.txt ath
 ```bash
 perl 16.Extract_Gene_In_GF.pl positive_selected.txt Orthogroups.txt PREFIX
 
-# 为了方便后续分析，这里自动提取受到正选择的基因家族中的拟南芥的基因，PREFIX是想要提取的目标物种的三个字母的缩写。
+# 为了方便后续分析，这里自动提取受到正选择的基因家族中的拟南芥的基因，PREFIX是想要提取的目标物种的三个字母的缩写（注意一般首字母大写）。
 ```
 
 #### 3.3.2 做go和kegg富集
@@ -286,6 +286,58 @@ foreach my $fa (@fas) {
 }
 ```
 
+#### 3.2.extract_low_copy_gf_seqs.pl
+
+```perl
+die "Usage:perl $0 Orthogroups.GeneCount.tsv Orthogroups.txt allpep.fa\n" if @ARGV != 3;
+
+
+
+open GC,"<","$ARGV[0]";
+open OG,"<","$ARGV[1]";
+open FA,"<","$ARGV[2]";
+
+
+L: while (<GC>) {
+        if (/^Or/) {next L}
+        s/\s+$//;
+        my @eles=split/\s+/;
+        my $OG=shift @eles;
+        my $ath=$eles[0];
+        next if $ath !=1;
+        for ($m=0;$m<$#eles;$m++) {
+                next L if ($eles[$m]>3 || $eles[$m]==0);
+        }
+        push @OGs,$OG;
+}
+
+while (<FA>) {
+        s/\s+$//;
+        if (/^\>/) {
+                s/^\>//;
+                $Gene=$_;
+        } else {
+                $Seq{$Gene}.=$_;
+        }
+}
+
+while (<OG>) {
+        s/\s+$//;
+        my @eles=split/\s+/;
+        my $OG=shift @eles;
+        $OG=~s/://;
+        if (grep {$OG eq $_} @OGs) {
+                open OUT,">","$OG.fa";
+                foreach my $ele (@eles) {
+                        print OUT "\>$ele\n$Seq{$ele}\n";
+                }
+                close OUT;
+        }
+}
+```
+
+
+
 #### 4.create_mkblastdb_sh.pl
 
 ```perl
@@ -297,11 +349,11 @@ foreach my $fa (@fas) {
         print SHS "makeblastdb -in $fa -out $prefix -dbtype prot\n";
 }
 
-`split -l 1000 split -l 1000 -d -a 1 mkblastdb.sh mkblastdb_`;
+`split -l 1000 -d -a 1 mkblastdb.sh mkblastdb_`;
 
 my @shs=glob("mkblastdb_*");
 foreach my $sh (@shs) {
-        `nohup bash $sh &`;
+        `nohup bash $sh 2>>mkblastdb.err &`;
 }
 ```
 
@@ -316,11 +368,11 @@ foreach my $fa (@fas) {
 		print BLS "blastp -query $fa -db $prefix -outfmt 6 -num_threads 5 -evalue 1e-5 -out $prefix.out\n"
 }
 
-`split -l 1000 split -l 1000 -d -a 1 blast.sh blast_`;
+`split -l 1000 -d -a 1 blast.sh blast_`;
 
 my @shs=glob("blast_*");
 foreach my $sh (@shs) {
-        `nohup bash $sh &`;
+        `nohup bash $sh 2>>blast.err &`;
 }
 ```
 
@@ -414,8 +466,8 @@ while (<GENELIST>) {
 	open PEPSEQ,">","$OG.pep";
 	open CDSSEQ,">","$OG.cds";
 	foreach my $Gene (@eles) {
-		print PEPSEQ "$Pep{$Gene}\n";
-		print CDSSEQ "$Cds{$Gene}\n";
+		print PEPSEQ "\>$Gene\n$Pep{$Gene}\n";
+		print CDSSEQ "\>$Gene\n$Cds{$Gene}\n";
 		warn "Cannot find the CDS sequence of Gene $Gene in $OG\n" if !exists $Cds{$Gene};
 		warn "Cannot find the protein sequence of Gene $Gene in $OG\n" if !exists $Pep{$Gene};		
 	}
@@ -442,6 +494,13 @@ foreach my $file (@files){
     print O "mafft --maxiterate 1000 --localpair $file >$outfile\n";
 }
 close O;
+
+`split -l 500 -d -a 1 mafft.sh mafft_`;
+
+my @shs=glob("mafft_*");
+foreach my $sh (@shs) {
+        `nohup bash $sh >>mafft.log 2>>mafft.err &`;
+}
 ```
 
 #### 9.sort_cds_mafft.pl
@@ -519,6 +578,7 @@ foreach my $pepfile (@mafftfiles){
     print O "perl $pal2alnpath $pepfile $cdsdir/paltoaln$sign -output fasta >$outdir/pal2aln_$sign\n";
 }
 close O;
+
 ```
 
 #### 11.create.gblocks_sh.pl
@@ -575,9 +635,8 @@ my @phys=glob("*phy");
 
 foreach my $phy (@phys) {
 
-open SH,"<<","codeml.sh";
-	my ($prefix=$phy)=~s/\.phy//;
-	open MA,"<","$prefix.ma.ctl";
+	(my $prefix=$phy)=~s/\.phy//;
+	open MA,">","$prefix.ma.ctl";
 	print MA "seqfile = $phy;
 treefile = speciestree.tree
 outfile = $phy.ma
@@ -605,7 +664,7 @@ Small_Diff = .5e-6
 *  fix_blength = 0
 method = 0";
 
-	open M0,"<","$prefix.m0.ctl";
+	open M0,">","$prefix.m0.ctl";
 	print M0 "seqfile = $phy
 treefile = speciestree.tree
 outfile = $phy.m0
@@ -711,7 +770,7 @@ foreach my $fa (@fas) {
 ```perl
 ## This script is used to annotate the positive selected gene family using the gene description information of A. thaliana.
  
-die "Usage: perl $0 positive_selected.txt Orthogroups.txt ath.gene.discription\n" if @ARGV!=4;
+die "Usage: perl $0 positive_selected.txt Orthogroups.txt ath.gene.discription ath.tf\n" if @ARGV!=4;
 
 use autodie;
 use strict;
@@ -719,7 +778,10 @@ use strict;
 open POSGF,"<","$ARGV[0]";
 open GF,"<","$ARGV[1]";
 open ANNO,"<","$ARGV[2]";
-open POSANNO,">","positive_selected_gf.Ath_anno.txt";
+open TF,"<","$ARGV[3]";
+open POSANNO,">","positive_selected.gf.Ath_anno.txt";
+open POSTF,">","positive_selected.gf.Ath_tf.txt";
+open TFCOUNT,">","positive_selected.gf.Ath_tf.count.txt";
 
 my @Positive_Selected_OGs;
 while (<POSGF>) {
@@ -743,6 +805,16 @@ while (<ANNO>) {
 }
 close ANNO;
 
+my %TF;
+while (<TF>) {
+	next if /^TF/;
+	s/\s+$//;
+	my ($Gene,$TF)=(split/\s+/)[0,2];
+	$TF{$Gene}=$TF;
+}
+close TF;
+
+my %TFNum;
 while (<GF>) {
 	s/\s+$//;
 	my $Line=$_;
@@ -753,9 +825,18 @@ while (<GF>) {
 		$Line=~m/Ath\|(.*?)\s+/;
 		my $Ath_Gene=$1;
 		print POSANNO "$OG\t$Ath_Gene\t$Anno{$Ath_Gene}\n";
+		print POSTF "$OG\t$Ath_Gene\t$TF{$Ath_Gene}\n";
+		$TFNum{$TF{$Ath_Gene}}++ if (exists $TF{$Ath_Gene});
 	}
 }
 close GF;
+close POSTF;
+close POSANNO;
+
+
+foreach my $TF (sort {$TFNum{$b}<=>$TFNum{$a}} keys %TFNum) {
+	print TFCOUNT "$TF\t$TFNum{$TF}\n";
+}
 ```
 
 #### 16.Extract_Gene_In_GF.pl
@@ -764,11 +845,13 @@ close GF;
 use autodie;
 use strict;
 
-open POSGF,"<","$ARGV[0]";
-open GF,"<","$ARGV[1]";
+my $PosGFFile=shift @ARGV;
+open POSGF,"<","$PosGFFile";
+my $OrthogroupFile=shift @ARGV;
+open GF,"<","$OrthogroupFile";
 open ATHGENELIST,">","Ath.genelist.txt";
-my $Spe=$ARGV[3];
-open SPEGENELIST,">","$Spe.genelist.txt";
+my @Spes=@ARGV;
+open SPEGENELIST,">","Spe.genelist.txt";
 
 my @Positive_Selected_OGs;
 while (<POSGF>) {
@@ -791,9 +874,12 @@ while (<GF>) {
 			if ($ele=~m/Ath\|(.*)/) {
 				my $Ath_Gene=$1;
 				print ATHGENELIST "$Ath_Gene\n";
-			} elsif ($ele=~m/$Spe\|(.*)/) {
-				my $Spe_Gene=$1;
-				print SPEGENELIST "$Spe_Gene\n";
+			} elsif ($ele=~m/(?<Gene>(?<Spe>\w{3})\|.*)/) {
+				my $Spe_Gene=$+{Gene};
+				my $Spe=$+{Spe};
+				if (grep {$Spe eq $_} @Spes) {
+					print SPEGENELIST "$Spe_Gene\n";
+				}
 			}
 		}
 	}
