更新了正选择pipeline中的富集分析部分

--- a/检测近缘种之间的正选择/paml/低拷贝基因家族正选择分析.md
+++ b/检测近缘种之间的正选择/paml/低拷贝基因家族正选择分析.md
@@ -172,9 +172,7 @@ perl 16.Extract_Gene_In_GF.pl positive_selected.txt Orthogroups.txt PREFIX
 
 #### 3.3.2 做go和kegg富集
 
-[note]: 具体可以参考我的富集pipeline，链接：https://github.com/SYSU-SinLee/genome-pipelines/tree/main/%E7%94%A8ClusterProfiler%E5%81%9AGO%E5%AF%8C%E9%9B%86。或者李玉龙的一份比较详细的教程：https://www.yuque.com/docs/share/e41471eb-5b6f-4c6a-90e2-62382c6818f0?#（密码：ykqg）。
-
-
+[note]: 具体可以参考我的富集pipeline，链接：https://github.com/SYSU-SinLee/genome-pipelines/tree/main/%E7%94%A8ClusterProfiler%E5%81%9AGO%E5%AF%8C%E9%9B%86
 
 
 
