拟南芥输出的基因名调整

--- a/检测近缘种之间的正选择/paml/低拷贝基因家族正选择分析.md
+++ b/检测近缘种之间的正选择/paml/低拷贝基因家族正选择分析.md
@@ -871,6 +871,7 @@ while (<GF>) {
 		foreach my $ele (@eles) {
 			if ($ele=~m/Ath\|(.*)/) {
 				my $Ath_Gene=$1;
+                                $Ath_Gene=~s/\.\d+$//;
 				print ATHGENELIST "$Ath_Gene\n";
 			} elsif ($ele=~m/(?<Gene>(?<Spe>\w{3})\|.*)/) {
 				my $Spe_Gene=$+{Gene};
